refactor(api): ♻️ 重构服务实例、告警历史等相关模块
重构了集群服务实例、告警历史、框架信息等多个模块的Mapper和Service层：
1. 统一了CRUD方法的接口定义
2. 优化了分页查询的实现方式
3. 移除了对MyBatis-Flex的QueryChain依赖
4. 增加了标准化的增删改查方法
5. 改造了返回值类型，使用统一的数据结构

模块涉及：
- ClusterServiceInstance
- ClusterAlertHistory
- FrameInfo
- ClusterGroup
- ClusterAlertQuota
- AutoScale

重构后的代码结构更加规范，便于维护和扩展

Signed-off-by: 任相鹏 <renxiangpeng@norinaviation.com>